begining html and css, 3 new pages + page home

--- a/static/html/accueil.html
+++ b/static/html/accueil.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Accueil</title>
+    <link rel="stylesheet" href="../style/header.css">
+    <link rel="stylesheet" href="../style/home.css">
+    <title>Home</title>
 </head>
+<header>
+    <a href="accueil">LOGO</a>
+    <nav>
+        <ul>
+            <li><a class="button-home" href="accueil">Home</a></li>
+            <li><a href="allemployees">Employee</a></li>
+            <li><a href="">Teams</a></li>
+        </ul>
+    </nav>
+    <i class="material-icons" style="font-size:50px;">account_circle</i>
+</header>
 <body>
-<h1>welcome to our web site</h1>
+<h1>Welcome to Logo, your employee management application.</h1>
 </body>
 </html>
