--- a/static/html/employees.html
+++ b/static/html/employees.html
@@ -36,7 +36,7 @@
           </div>
           <div>
             <label for="firstName">First Name :</label><br>
-            <input type="text" id="FirstName" name="FirstName" required>
+            <input type="text" id="firstName" name="firstName" required>
           </div>
           <div>
             <label for="phoneNumber">Phone Number:</label><br>
