add data to the data base, corriger foreign key referent, preparation allemployee pour recevoir data

--- a/static/html/employees.html
+++ b/static/html/employees.html
@@ -34,7 +34,7 @@
               </div>
               <div>
                   <label for="firstName">First Name :</label><br>
-                  <input type="text" id="FirstName" name="FirstName" required>
+                  <input type="text" id="firstName" name="firstName" required>
               </div>
               <div>
                   <label for="phoneNumber">Phone Number:</label><br>
