--- a/static/html/employees.html
+++ b/static/html/employees.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="../style/header.css">
     <link rel="stylesheet" href="../style/employees.css">
     <title>Accueil</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/header.css">
+    <link rel="stylesheet" href="../style/employees.css">
+    <title>Accueil</title>
 </head>
 <header>
     <a href="accueil">LOGO</a>
