--- a/static/html/employees.html
+++ b/static/html/employees.html
@@ -24,7 +24,7 @@
 
 <body>
 
-  <form id="newEmployee" action="/employees">
+  <form id="newEmployee" action="/employees" method="post">
 
     <h1>Employee personal informations</h1>
     <section class="employee-zone">
