AddDISTINCTAndDepartment+Post+Wage

--- a/static/html/allemployees.html
+++ b/static/html/allemployees.html
@@ -38,9 +38,9 @@
                 </div>
                 <div class="employee-working-info">
                     <p>Department: {{.Department}}</p>
-                    <p>Post: {{.PostId}}</p>
+                    <p>Post: {{.PostTitle}}</p>
                     <p>Wage: {{.Wage}}</p>
-                    <p>Manage By: {{.ReferentId}}</p>
+                    <p>Manage By: {{.ReferentName}}</p>
                 </div>
                 <a href="editemployee" class="edit-employee">Edit</a>
             </div>
