--- a/static/html/editemployee.html
+++ b/static/html/editemployee.html
@@ -29,7 +29,7 @@
 </header>
 <body>
 
-    <form id="newEmployee" action="/employees">
+    <form id="newEmployee" action="/employees" method="post">
 
       <h1>Edit employee personal informations</h1>
       <section class="employee-zone">
@@ -41,7 +41,7 @@
               </div>
               <div>
                   <label for="firstName">First Name :</label><br>
-                  <input type="text" id="FirstName" name="FirstName" required>
+                  <input type="text" id="firstName" name="firstName" required>
               </div>
               <div>
                   <label for="phoneNumber">Phone Number:</label><br>
@@ -60,31 +60,35 @@
             </section>
         </section>
         <section class="employee-work-zone">
-            <div>
-                <label for="department">Department :</label><br>
-                <select id="department" name="department" required>
-                    {{range .Departments}}
-                        <option value="{{.Id}}">{{.Title}}</option>
-                    {{end}}
-                </select>
-            </div>
-            <div>
-                <label for="post">Post :</label><br>
-                <select id="posts" name="posts" required> 
-                    {{range .Posts}}
-                        <option value="{{.ID}}">{{.Title}}</option>
-                    {{end}}
-                </select>
-            </div>
-            <div>
-                <label for="manageBy">Manage By :</label><br>
-                <select id="manageBy" name="manageBy" required>
-                    {{range .Referents}}
-                        <option value="{{.ID}}">{{.Name}}</option>
-                    {{end}}
-                </select>
-            </div>
-        </section>
+          <div>
+            <label for="department">Department</label><br>
+            <select id="department" name="department" required>
+                <option value="direction">Direction</option>
+                <option value="humanResources">Human Resources</option>
+                <option value="accountability">Accountability</option>
+                <option value="marketing">Marketing</option>
+                <option value="production">Production</option>
+              </select>
+          </div>
+          <div>
+            <label for="post">Post</label><br>
+            <select id="post" name="post" required>
+                <option value="Directeur Général">Directeur Général</option>
+                <option value="Responsable RH">Responsable RH</option>
+                <option value="Chargé de recrutement">Chargé de recrutement</option>
+                <option value="Comptable">Comptable</option>
+                <option value="Responsable Marketing">Responsable Marketing</option>
+                <option value="Assistant Marketing">Assistant Marketing</option>
+                <option value="Responsable de production">Responsable de production</option>
+                <option value="Opérateur de production">Opérateur de production</option>
+                <option value="Commercial">Commercial</option>
+              </select>
+          </div>
+          <div>
+              <label for="manageBy">Manage By :</label><br>
+              <input type="text" id="manageBy" name="manageBy" required>
+          </div>
+      </section>
     </section>
     <button type="submit">Edit</button>
     </form>
