--- a/static/html/allemployees.html
+++ b/static/html/allemployees.html
@@ -42,7 +42,7 @@
                     <p>Wage: {{.Wage}}</p>
                     <p>Manage By: {{.ReferentName}}</p>
                 </div>
-                <a href="editemployee" class="edit-employee">Edit</a>
+                <a href="editemployee?firstname={{.FirstName}}" class="edit-employee">Edit</a>
             </div>
         {{end}}
         <section class="employee-zone">
