--- a/static/html/allemployees.html
+++ b/static/html/allemployees.html
@@ -64,6 +64,12 @@
                     <p>Wage: {{.Wage}}</p>
                     <p>Manage By: {{.ReferentName}}</p>
                 </div>
+
+                <form id="deleteEmployee" action="/allemployees" method="post">
+                    <input type="text" name="delete" value="{{.Id}}" hidden>
+                    <input type="submit" value="delete Employee">
+                </form>
+
                 <a href="editemployee?firstname={{.FirstName}}" class="edit-employee">Edit</a>
             </div>
         {{end}}
